# cookiecutter-poetry

./: .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.j2  .python-version  .readthedocs.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  codecov.yaml  cookiecutter.json  index.html  justfile  mkdocs.yml  pyproject.toml  renovate.json  renovate.json5  shell.nix  sitemap.xml  tox.ini
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: main.yml  on-merge-to-main.yml  on-pull-request.yml  on-release-main.yml
.github/workflows/run-checks/: action.yml
.github/workflows/setup-poetry-env/: action.yml
cookiecutter_poetry/: cli.py
docs/: conf.py  contents.rst  faq.rst  feature_details.rst  features.rst  index.md  index.rst  prompt_arguments.md  prompt_arguments.rst  releasing.rst  tutorial.md  tutorial.rst
docs/_static/css/: custom.css
docs/features/: cicd.md  cicd.rst  codecov.md  devcontainer.md  docker.md  formatting.md  formatting.rst  justfile.md  linting.md  makefile.md  makefile.rst  mkdocs.md  mypy.md  poetry.md  poetry.rst  publishing.md  pyenv.rst  pytest.md  pytest.rst  releasing.rst  sphinx.md  sphinx.rst  tox.md  tox.rst
docs/tutorials/: bootstrap.md  mermaid.md  pycharm_nixos.md
features/cicd/: index.html
features/codecov/: index.html
features/devcontainer/: index.html
features/docker/: index.html
features/formatting/: index.html
features/linting/: index.html
features/makefile/: index.html
features/mkdocs/: index.html
features/mypy/: index.html
features/poetry/: index.html
features/publishing/: index.html
features/pytest/: index.html
features/tox/: index.html
hooks/: post_gen_project.py  post_gen_python.py  pre_gen_project.py
poetry_cookiecutter/: cli.py
prompt_arguments/: index.html
search/: search_index.json
templates/cookiecutter-poetry/hooks/: post_gen_project.py
templates/cookiecutter-poetry/{{cookiecutter.project_name}}/: .pre-commit-config.yaml  CONTRIBUTING.rst  Dockerfile  Makefile  README.md  mkdocs.yml  tox.ini
templates/cookiecutter-poetry/{{cookiecutter.project_name}}/.github/workflows/: on-release-main.yml
templates/cookiecutter-poetry/{{cookiecutter.project_name}}/docs/: index.md  modules.md
templates/cookiecutter-poetry/{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: foo.py
tests/: test_cookiecutter.py  utils.py
tutorial/: index.html
{{cookiecutter.module_name}}/: tox.ini
{{cookiecutter.module_name}}/tests/: test_foo.py
{{cookiecutter.project_name}}/: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.md  README.rst  codecov.yaml  justfile  mkdocs.yml  pyproject.toml  python-version  shell.nix  tox.ini
{{cookiecutter.project_name}}/.devcontainer/: devcontainer.json  postCreateCommand.sh
{{cookiecutter.project_name}}/.github/: pull_request_template.md
{{cookiecutter.project_name}}/.github/ISSUE_TEMPLATE/: bug_report.md  general_question.md
{{cookiecutter.project_name}}/.github/actions/run-checks/: action.yml
{{cookiecutter.project_name}}/.github/actions/setup-poetry-env/: action.yml
{{cookiecutter.project_name}}/.github/workflows/: .push-docker-registry.yml  main.yml  on-merge-to-main.yml  on-pull-request.yml  on-release-main.yml  validate-codecov-config.yml
{{cookiecutter.project_name}}/.github/workflows/run-checks/: action.yml
{{cookiecutter.project_name}}/.github/workflows/setup-poetry-env/: action.yml
{{cookiecutter.project_name}}/docs/: conf.py  contents.rst  index.md  index.rst  modules.md  readme.rst
{{cookiecutter.project_name}}/tests/: conftest.py  test_foo.py  test_main.py
{{cookiecutter.project_name}}/tests/cli/api/: conftest.py
{{cookiecutter.project_name}}/tests/endpoints/: conftest.py  test_samples.py
{{cookiecutter.project_name}}/tests/models/: conftest.py  test_sample.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __init__.py  _server_doc.py  app_builder.py  db_tables.py  foo.py  main.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/api_model/: __init__.py  common.py  sample.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/cli/: __init__.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/cli/api/: __init__.py  samples.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/cli/db/: __init__.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/data/: samples.yml
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/dbms/: __init__.py  sqlite_db.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/dependencies/: __init__.py  database.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/logging/: __init__.py  fapi_route.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/model/: db_crud.py  joint_tables.py  sample.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/routers/: __init__.py  api_models.py  health.py  samples.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/utils/: __init__.py  cli.py  file.py  session.py  test_client.py  typer.py
{{cookiecutter.project_slug}}/: .gitignore  Makefile  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/setup-poetry-env/: action.yml
{{cookiecutter.project_slug}}/test/: test_foo.py
{{cookiecutter.project_slug}}/tests/: test_foo.py
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/: foo.py
