[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]
repository = "https://github.com/{{ cookiecutter.author_github_handle }}/{{ cookiecutter.project_slug }}"
documentation = "https://{{ cookiecutter.author_github_handle }}.github.io/{{ cookiecutter.project_slug }}/"
readme = "README.md"
keywords = ['cookiecutter', 'template', 'poetry']
packages = [
  {include = "cookiecutter_poetry"}
]
include = [
  '{{cookiecutter.project_name}}/**/*',
  'cookiecutter.json',
  'hooks/*'
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
cookiecutter = "^2.1.1"
{% if cookiecutter.database == 'y' %}
sqlmodel = {extras = ["all"], version = "^0.0.16"}
omegaconf = "^2.3.0"
sqlalchemy-utils = "^0.41.2"
fastapi = {extras = ["all"], version = "^0.110.0"}
typer = "^0.12.3"
types-requests = "^2.31.0.20240406"
boto3 = "^1.34.122"
{% endif %}
{% if cookiecutter.dockerfile == 'y' %}
docker = "^7.1.0"
{% endif %}

[tool.poetry.group.dev.dependencies]
pytest-cookies = "^0.6.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
{% if cookiecutter.deptry == 'y' %}
deptry = "^0.12.0"
{% endif %}
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
pytest-check = "^2.3.1"
pytest-mock = "^3.14.0"
ruff = "^0.0.235"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-mermaid2-plugin = "^1.1.1"
pymdown-extensions = "^10.7.1"
mkdocs-drawio-file = "^1.5.2"

[tool.poetry.group.test.dependencies]
pytest-lazy-fixture = "^0.6.3"
nbmake = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.poetry.scripts]
ccp = 'cookiecutter_poetry.cli:main'

[tool.mypy]
files = ['cookiecutter_poetry']
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

{% if cookiecutter.deptry == 'y' %}
[tool.deptry]
extend_exclude = [
  "{{cookiecutter.project_name}}"
]

[tool.deptry.per_rule_ignores]
DEP002 = ["cookiecutter"]
{% endif %}

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # F405 `XYZ` may be undefined, or defined from star imports
    "F405",
    # F403 `from xyz import *` used; unable to detect undefined names
    "F403",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["cookiecutter_poetry"]

{% if cookiecutter.deptry == 'y' %}
[tool.deptry]
ignore = ["DEP003", "DEP001"]
[tool.deptry.per_rule_ignores]
DEP002 = ['types-requests']
{% endif %}

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
{% if cookiecutter.database == 'y' %}
# Database id otherwise generates this error
"{{cookiecutter.project_name}}/*" = ["A003"]

[tool.poetry.scripts]
start-server = "{{cookiecutter.project_name}}.main:start_server_entry_point"
# Change name of cli script after project creation
{{cookiecutter.project_name}} = "{{cookiecutter.project_name}}.cli:cli_app"
{% endif %}
